[gd_scene load_steps=3 format=2]

[ext_resource path="res://Test.gd" type="Script" id=1]
[ext_resource path="res://Main.tscn" type="PackedScene" id=2]

[node name="Test" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" parent="." instance=ExtResource( 2 )]

[node name="Shape" type="Label" parent="."]
margin_left = 171.827
margin_top = 77.7817
margin_right = 211.827
margin_bottom = 91.7817

[node name="Grid" type="Label" parent="."]
margin_left = 173.948
margin_top = 30.4056
margin_right = 213.948
margin_bottom = 44.4056

[node name="PickShape" type="Button" parent="."]
visible = false
margin_left = 11.5101
margin_top = 4.21415
margin_right = 102.51
margin_bottom = 24.2141
text = "Pick a shape"

[node name="RotateLeft" type="Button" parent="."]
visible = false
margin_left = 13.1938
margin_top = 32.8468
margin_right = 91.1938
margin_bottom = 52.8468
text = "Rotate left"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RotateRight" type="Button" parent="."]
visible = false
margin_left = 9.82646
margin_top = 59.7957
margin_right = 95.8265
margin_bottom = 79.7957
text = "Rotate right"

[node name="AddShapeToGrid" type="Button" parent="."]
visible = false
margin_left = 7.67114
margin_top = 85.392
margin_right = 136.671
margin_bottom = 105.392
text = "Add Shape To Grid"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RemoveShapeFromGrid" type="Button" parent="."]
visible = false
margin_left = 148.38
margin_top = 84.8156
margin_right = 341.38
margin_bottom = 104.816
text = "Remove shape from the grid"

[node name="Lock" type="Button" parent="."]
visible = false
margin_left = 352.788
margin_top = 86.5974
margin_right = 393.788
margin_bottom = 106.597
text = "Lock"

[node name="SpinBox" type="SpinBox" parent="."]
visible = false
margin_left = 404.844
margin_top = 84.9491
margin_right = 478.844
margin_bottom = 108.949
min_value = -10.0
max_value = 210.0
value = 35.0
[connection signal="button_down" from="PickShape" to="." method="_on_PickShape_button_down"]
[connection signal="button_down" from="RotateLeft" to="." method="_on_RotateLeft_button_down"]
[connection signal="button_down" from="RotateRight" to="." method="_on_RotateRight_button_down"]
[connection signal="button_down" from="AddShapeToGrid" to="." method="_on_AddShapeToGrid_button_down"]
[connection signal="button_down" from="RemoveShapeFromGrid" to="." method="_on_RemoveShapeFromGrid_button_down"]
[connection signal="button_down" from="Lock" to="." method="_on_Lock_button_down"]
